--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "My first chat app using socket.io",
     "type": "module",
     "dependencies": {
+        "@socket.io/cluster-adapter": "^0.3.0",
         "express": "^4.22.1",
         "socket.io": "^4.8.3",
         "sqlite": "^5.1.1",
